<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="sugarcaneselection.thaib.org.sugarcanselection.FragmentPictureManager">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="กรุณาถ่ายรูปส่วนต่างๆ"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_upper"
                android:layout_width="@dimen/picture_thumb_width"
                android:layout_height="@dimen/picture_thumb_width"
                android:layout_margin="20dp"
                android:src="@drawable/ic_camera_alt_grey600_48dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_upper"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/tag_upper_picture"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_lower"
                android:layout_width="@dimen/picture_thumb_width"
                android:layout_height="@dimen/picture_thumb_width"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image_upper"
                android:layout_margin="20dp"
                android:src="@drawable/ic_camera_alt_grey600_48dp" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_alignTop="@+id/image_lower"
                android:layout_gravity="center"
                android:text="@string/tag_lower_picture"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_full"
                android:layout_width="@dimen/picture_thumb_width"
                android:layout_height="@dimen/picture_thumb_width"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image_upper"
                android:layout_margin="20dp"
                android:src="@drawable/ic_camera_alt_grey600_48dp" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_alignTop="@+id/image_lower"
                android:layout_gravity="center"
                android:text="@string/tag_full_picture"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
